--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -9,16 +9,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!-- Iron elements -->
-<link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/iron-selector/iron-selector.html">
 
 <!-- Paper elements -->
-<link rel="import" href="../bower_components/paper-material/paper-material.html">
-<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
-<link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/paper-material/paper-material.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/paper-styles/paper-styles-classes.html">
+<link rel="import" href="https://github.com/gfa61-ga/promises/blob/master/bower_components/paper-toolbar/paper-toolbar.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
